Closed
Bug 411353
Opened 15 years ago
Closed 15 years ago
Default bookmarks and Smart folder missing from New Profile
Categories
(Firefox :: Bookmarks & History, defect, P1)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 3 beta3
People
(Reporter: marcia, Assigned: dietrich)
Details
(Keywords: regression)
Attachments
(1 file)
1.88 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
Seen using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3pre) Gecko/2008010805 Minefield/3.0b3pre. Seen on Mac as well. STR: 1. Start the latest nightly with a new profile. Result: Observe that nothing appears in the bookmarks toolbar (no smart browsing folder and no default RSS feed).
Reporter | ||
Updated•15 years ago
|
Comment 1•15 years ago
|
||
I see this with the latest, but not with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3pre) Gecko/2008010404 Minefield/3.0b3pre this regression is p1 / blocking, in my book. I don't see anything in the error console. quick scan of checkins make me think bug #408751, nsNavHistory::Init is fragile (r=sspitzer), but I may apologize before the day is out.
Severity: major → normal
Priority: -- → P1
Target Milestone: --- → Firefox 3 M11
Updated•15 years ago
|
Severity: normal → major
Comment 2•15 years ago
|
||
This is a regression that broke between 2008010705 and 2008010805
Priority: P1 → --
Target Milestone: Firefox 3 M11 → ---
Updated•15 years ago
|
Priority: -- → P1
Target Milestone: --- → Firefox 3 M11
Assignee | ||
Comment 3•15 years ago
|
||
i reverted the fix for bug 408751 and the problem is still there. also, if the regression range in comment #2 is correct, bug 408751 was checked in a day prior.
Comment 4•15 years ago
|
||
thanks dietrich. I was worried it might have been marco change (plus my tweaks) for bug #392399, but that landed on 1/04.
Assignee | ||
Updated•15 years ago
|
Assignee: nobody → dietrich
Assignee | ||
Comment 5•15 years ago
|
||
looking like bookmarks.html is not in the profile dir.
Assignee | ||
Comment 6•15 years ago
|
||
weird, with these steps: 1. open with -ProfileManager 2. create a new profile 3. quit Branch: directory has all profile files Nightly: directory is empty
Assignee | ||
Comment 7•15 years ago
|
||
yep, confirmed that 2008010704 nightly does not have the problem, and 2008010804 does.
Comment 8•15 years ago
|
||
> looking like bookmarks.html is not in the profile dir. I remember seeing some bug mail traffic about something like this (see bug #381365), but I don't remember any checkins of that nature. > Branch: directory has all profile files > Nightly: directory is empty do you mean, branch (your debug build) vs nightly (optimized)?
Assignee | ||
Comment 9•15 years ago
|
||
[5:51pm] philor: dietrich: bsmedberg accidentally landed his patch for bug 381365 as part of bug 410610's checkin [5:52pm] philor: the nsToolkitProfileService.cpp change wasn't supposed to be there i'm reverting to see if this is the problem
Assignee | ||
Comment 10•15 years ago
|
||
(In reply to comment #9) > [5:51pm] philor: dietrich: bsmedberg accidentally landed his patch for bug > 381365 as part of bug 410610's checkin > [5:52pm] philor: the nsToolkitProfileService.cpp change wasn't supposed to be > there > > i'm reverting to see if this is the problem > yep, that's the problem.
Comment 11•15 years ago
|
||
confirmed this regressed between Jan 7 06:50 - working Jan 7 07:50 Fail
Assignee | ||
Comment 12•15 years ago
|
||
Attachment #296072 -
Flags: review?
Assignee | ||
Updated•15 years ago
|
Attachment #296072 -
Flags: review? → review?(benjamin)
Comment 13•15 years ago
|
||
Comment on attachment 296072 [details] [diff] [review] revert the patch from bug 381365 Aww frick. Although, this is what we need long-term ;-)
Attachment #296072 -
Flags: review?(benjamin) → review+
Assignee | ||
Comment 14•15 years ago
|
||
yep, will fix along w/ the other bug once it's blocker+'d and prioritized. Checking in toolkit/profile/src/nsToolkitProfileService.cpp; /cvsroot/mozilla/toolkit/profile/src/nsToolkitProfileService.cpp,v <-- nsToolkitProfileService.cpp new revision: 1.20; previous revision: 1.19 done
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 15•15 years ago
|
||
verified with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008010904 Minefield/3.0b3pre
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Comment 16•13 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•