Bug 411353 ? Default bookmarks and Smart folder missing from New Profile (r=bsmedberg, a=revert)